# gamewaifu

./: .gitignore  .gitmodules  Cargo.toml  b  drmario  e.txt  get_tests.sh  h.txt  pokr  todo.txt
front_console/: Cargo.toml  a.txt
front_console/src/: args.rs  main.rs
front_raylib/: Cargo.toml  config.toml
front_raylib/src/: args.rs  config.rs  main.rs
gb/: Cargo.toml
gb/src/: apu.rs  bus.rs  lib.rs  mapper.rs  ppu.rs  ppu_old.rs
ppu/: Cargo.toml
ppu/src/: lib.rs
sm83/: Cargo.toml
sm83/src/: bus.rs  cpu.rs  lib.rs
sm83/tester/: Cargo.toml  test.sh
sm83/tester/src/: main.rs
src/: args.rs  main.rs
src/gb/: bus.rs  mapper.rs  mod.rs
tests/: Makefile  alu.s  call_ret.s  jp.s  jr.s  ld.s  link.ld  simple.s  tests.inc
tinkering/: Makefile  palette.txt  sprite.asm  tileset.xcf
