[workspace]
members = ["gb", "sm83", "sm83/tester"]

[package]
name = "gamewaifu"
version = "0.1.0"
edition = "2021"

[dependencies]
gb = { path = "gb" }
sm83 = { path = "sm83" }
raylib = { version = "5.0.1", optional = true }
clap = { version = "4.5.7", features = ["derive"] }

[profile.dev]
overflow-checks = false

[features]
raylib = ["dep:raylib"]
