[workspace]
members = ["gb", "sm83", "sm83/tester"]

[package]
name = "gamewaifu"
version = "0.1.0"
edition = "2021"

[dependencies]
gb = { path = "gb" }
sm83 = { path = "sm83" }
raylib = { version = "5.0.1", optional = true }
clap = { version = "4.5.7", features = ["derive"] }
ctrlc = { version = "3.4.4", optional = true }
gif = { version = "0.13.1", optional = true }

[profile.dev]
overflow-checks = false

[features]
default = ["raylib"]
raylib = ["dep:raylib", "dep:gif"]
console = ["dep:ctrlc"]
