[package]
name = "front_console"
version = "0.1.0"
edition = "2021"

[dependencies]
gb = { path = "../gb" }
clap = { version = "4.5.7", features = ["derive"] }
ctrlc = "3.4.4"
rodio = { version = "0.19", default-features = false, optional = true }
termion = "4.0.2"

[features]
default = ["audio"]
audio = ["dep:rodio"]
wav = []
